--- a/WPFLibrary/View/BookRentingWindow.xaml
+++ b/WPFLibrary/View/BookRentingWindow.xaml
@@ -10,10 +10,8 @@
     <Border Padding="10" >
         <Grid>
             <StackPanel>
-                <Label Name="DataContextTitle" Content="Users" FontSize="18px" FontWeight="DemiBold" HorizontalContentAlignment="Center" Margin="20,0,20,0" Height="40" Width="300"/>
-                <ListBox Name="DataContextContainer" SelectionChanged="DataContextContainer_SelectionChanged" VerticalAlignment="Top" Margin="20,0,20,0" MinHeight="200" MaxHeight="200" />
-
-                <Grid Margin="0 20 0 0">
+                <Label Name="DataContextTitle" Content="Regulars" FontSize="18px" FontWeight="DemiBold" HorizontalContentAlignment="Center" Margin="20,0,20,0" Height="40" Width="300"/>
+                <Grid Margin="0,20,-0.4,0" Height="94">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
@@ -21,10 +19,8 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- Buttons -->
-                    <StackPanel Grid.Column="1">
-                        <Button x:Name="RentBookButton" Click="RentBookButton_Click" Margin="0 0 0 0" Content="Rent Book"/>
-                        <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0 10 0 0" Content="Close"/>
-                    </StackPanel>
+                    <Button x:Name="RentBookButton" Click="RentBookButton_Click" Margin="9.4,0,0,23" Content="Rent Book" HorizontalAlignment="Left" Width="149" Grid.Column="1" RenderTransformOrigin="0.653,0.52"/>
+                    <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0,0,4.6,23" Content="Close" HorizontalAlignment="Right" Width="143"/>
                 </Grid>
             </StackPanel>
         </Grid>
