--- a/WPFLibrary/App.xaml
+++ b/WPFLibrary/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WPFLibrary.App"
+﻿<Application x:Class="WPFBookstore.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFLibrary"
+             xmlns:local="clr-namespace:WPFBookstore"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
