--- a/WPFLibrary/View/BookRentingWindow.xaml
+++ b/WPFLibrary/View/BookRentingWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WPFLibrary.BookRentingWindow"
+﻿<Window x:Class="WPFBookstore.BookRentingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFLibrary"
+        xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
         Title="Book Renting" MinHeight="380" MinWidth="500" Height="380" Width="500" MaxHeight="380" MaxWidth="500">
 
