--- a/WPFLibrary/View/CannotRemoveErrorWindow.xaml
+++ b/WPFLibrary/View/CannotRemoveErrorWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WPFLibrary.CannotRemoveErrorWindow"
+﻿<Window x:Class="WPFBookstore.CannotRemoveErrorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFLibrary"
+        xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
         Title="Error" MinHeight ="250" MinWidth="420" Height="250" Width="420" MaxHeight="250" MaxWidth="420">
 
