--- a/WPFLibrary/View/EditBookWindow.xaml
+++ b/WPFLibrary/View/EditBookWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WPFLibrary.EditBookWindow"
+﻿<Window x:Class="WPFBookstore.EditBookWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFLibrary"
+        xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
         Title="Editing Book" MinHeight ="300" MinWidth="400" Height="300" Width="400">
 
