--- a/WPFLibrary/View/MainWindow.xaml
+++ b/WPFLibrary/View/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WPFLibrary.MainWindow"
+﻿<Window x:Class="WPFBookstore.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFLibrary"
+        xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="LibraryManager" MinHeight ="450" MinWidth ="820" Height="450" Width="820">
+        Title="BookstoreManager" MinHeight ="450" MinWidth ="820" Height="450" Width="820">
 
 	
 	<Border Padding="10">
@@ -36,7 +36,7 @@
 			<StackPanel Grid.Column="1" Margin="0,0,-0.4,0">
 
 				<!-- Buttons for changing lists -->
-				<TextBlock Text="Library Lists" FontWeight="Bold" Margin="10 60 0 10" />
+				<TextBlock Text="Bookstore Lists" FontWeight="Bold" Margin="10 60 0 10" />
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="2*" />
