--- a/WPFLibrary/View/ModificationResultWindow.xaml
+++ b/WPFLibrary/View/ModificationResultWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WPFLibrary.ModificationResultWindow"
+﻿<Window x:Class="WPFBookstore.ModificationResultWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFLibrary"
+        xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
         Title="Result" MinHeight ="250" MinWidth="320" Height="250" Width="320" MaxHeight="250" MaxWidth="320">
 
