--- a/WPFLibrary/View/CannotRemoveErrorWindow.xaml
+++ b/WPFLibrary/View/CannotRemoveErrorWindow.xaml
@@ -8,7 +8,7 @@
         Title="Error" MinHeight ="250" MinWidth="420" Height="250" Width="420" MaxHeight="250" MaxWidth="420">
 
 
-    <Border Padding="10">
+    <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}">
         <StackPanel>
             <!-- Message -->
             <TextBlock x:Name="MessageBlock" TextWrapping="Wrap"  FontSize="18px" Text="Error message" HorizontalAlignment="Center" Margin="20 0 20 0"/>
