--- a/WPFLibrary/View/AddBookWindow.xaml
+++ b/WPFLibrary/View/AddBookWindow.xaml
@@ -8,7 +8,7 @@
         Title="Adding Book" MinHeight ="300" MinWidth="400" Height="300" Width="400">
 
 
-    <Border Padding="10">
+    <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}">
         <StackPanel>
             <!-- Window Title-->
             <TextBlock Text="Adding new book" FontWeight="Bold" Margin="0 10" />
