--- a/WPFLibrary/View/BookSellingWindow.xaml
+++ b/WPFLibrary/View/BookSellingWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="WPFBookstore.BookRentingWindow"
+﻿<Window x:Class="WPFBookstore.BookSellingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="Book Renting" MinHeight="380" MinWidth="500" Height="380" Width="500" MaxHeight="380" MaxWidth="500">
+        Title="Book Selling" MinHeight="380" MinWidth="500" Height="380" Width="500" MaxHeight="380" MaxWidth="500">
 
-    <Border Padding="10" >
+    <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" >
         <Grid>
             <StackPanel>
                 <Label Name="DataContextTitle" Content="Regulars" FontSize="18px" FontWeight="DemiBold" HorizontalContentAlignment="Center" Margin="20,0,20,0" Height="40" Width="300"/>
@@ -19,7 +19,7 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- Buttons -->
-                    <Button x:Name="RentBookButton" Click="RentBookButton_Click" Margin="9.4,0,0,23" Content="Rent Book" HorizontalAlignment="Left" Width="149" Grid.Column="1" RenderTransformOrigin="0.653,0.52"/>
+                    <Button x:Name="SellBookButton" Click="SellBookButton_Click" Margin="9.4,0,0,23" Content="Sell Book" HorizontalAlignment="Left" Width="149" Grid.Column="1" RenderTransformOrigin="0.653,0.52"/>
                     <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0,0,4.6,23" Content="Close" HorizontalAlignment="Right" Width="143"/>
                 </Grid>
             </StackPanel>
