Update start work

--- a/WPFLibrary/View/BookReturnResultWindow.xaml
+++ b/WPFLibrary/View/BookReturnResultWindow.xaml
@@ -5,15 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="Returning result" MinHeight ="250" MinWidth="320" Height="250" Width="320" MaxHeight="250" MaxWidth="320">
+        Title="Result" MinHeight ="250" MinWidth="320" Height="250" Width="320" MaxHeight="250" MaxWidth="320">
 
-    
+
     <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}">
         <StackPanel>
             <!-- Message -->
-            <TextBlock x:Name="MessageBlock" TextWrapping="Wrap"  FontSize="18px" Text="Result message" HorizontalAlignment="Center" Margin="20 0 20 0"/>
 
-            <Grid Margin="0 20 0 0">
+            <!-- Message -->
+
+            <!-- Message -->
+
+            <!-- Message -->
+
+            <!-- Message -->
+
+            <!-- Message -->
+            <!-- Message -->
+            <!-- Message -->
+            <TextBlock x:Name="MessageBlock" TextWrapping="Wrap"  FontSize="18px" Text="Result message" Margin="87,0,76.6,0" Height="39"/>
+            <Grid Margin="0,20,-0.4,0" Height="50">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
