--- a/WPFLibrary/View/EditBookWindow.xaml
+++ b/WPFLibrary/View/EditBookWindow.xaml
@@ -24,9 +24,9 @@
             <!-- Genre -->
             <TextBlock Text="Genre" Margin="0 10 0 0" />
             <TextBox x:Name="GenreText" Padding="2" />
+            <Button x:Name="UpdateBookButton" Click="UpdateBookButton_Click" Margin="0,20,199.6,10" Content="Update Book" HorizontalAlignment="Right" Width="174"/>
 
             <!-- Buttons -->
-            <Button x:Name="UpdateBookButton" Click="UpdateBookButton_Click" Margin="0 20 200 10" Grid.Column="0" Content="Update Book"/>
             <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0 0 200 10" Grid.Column="0" Content="Close"/>
         </StackPanel>
     </Border>
