--- a/WPFLibrary/View/EditBookWindow.xaml
+++ b/WPFLibrary/View/EditBookWindow.xaml
@@ -11,7 +11,7 @@
     <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}">
         <StackPanel>
             <!-- Window Title-->
-            <TextBlock Text="Editing book" FontWeight="Bold" Margin="0 10" />
+            <TextBlock Text="Editing book" Margin="0 10" FontFamily="Stencil" FontSize="20" />
 
             <!-- Title -->
             <TextBlock Text="Title" />
