--- a/WPFLibrary/View/MainWindow.xaml
+++ b/WPFLibrary/View/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="BookstoreManager" MinHeight ="450" MinWidth ="820" Height="450" Width="820">
+        Title="BookstoreManager" MinHeight ="450" MinWidth ="820" Height="462" Width="820">
 
 
     <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}">
@@ -24,63 +24,56 @@
 
 
             <!-- Scrollable list -->
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="80*"/>
-                    <ColumnDefinition Width="79*"/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0">
-                    <Label x:Name="DataContextTitle" FontSize="18px" FontWeight="DemiBold" HorizontalContentAlignment="Center" VerticalAlignment="Top" Margin="40,20,40,0" Height="40"/>
-                    <ListBox x:Name="DataContextContainer" SelectionChanged="DataContextContainer_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,0,0,0" MinWidth="400" MinHeight="300" Width="Auto" Height="193"/>
-                </StackPanel>
+            <Grid Grid.ColumnSpan="2" Margin="0,0,-0.4,0" Height="400" VerticalAlignment="Bottom">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="29*"/>
+                    <RowDefinition Height="171*"/>
+                </Grid.RowDefinitions>
+
+
+                <Label x:Name="DataContextTitle" FontSize="18px" Margin="19,46,0,315" FontFamily="Stencil" Width="728" HorizontalAlignment="Left" Grid.RowSpan="2"/>
+                <ListBox x:Name="DataContextContainer" SelectionChanged="DataContextContainer_SelectionChanged" VerticalAlignment="Top" Margin="10,28.4,10,0" MinWidth="200" MinHeight="150" Height="171" Grid.Row="1"/>
+
             </Grid>
 
 
 
 
             <!-- Buttons stack panel-->
-            <StackPanel Grid.Column="1" Margin="0,10,-0.4,0">
+            <Grid Height="138" Margin="0,252,-0.4,10" Grid.ColumnSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="198*" />
+                    <ColumnDefinition Width="199*" />
+                </Grid.ColumnDefinitions>
 
-                <!-- Buttons for changing lists -->
-                <TextBlock Text="Bookstore Lists" FontWeight="Bold" Margin="10 60 0 10" />
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-
-                    <StackPanel Grid.Column="0">
-                        <Button x:Name="BooksButton" Click="BooksButton_Click" Margin="10 0 10 2" Grid.Column="0" Content="Books" />
-                        <Button x:Name="RentalsButton" Click="RentalsButton_Click" Margin="10 0 10 2" Grid.Column="0" Content="Rentals" />
-                    </StackPanel>
-                </Grid>
+                <!-- First column -->
 
 
-                <!-- Control Buttons -->
-                <TextBlock x:Name="ControlsText" Text="Managing Data" FontWeight="Bold" Margin="10 50 10 10" />
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                <!-- Second column-->
+                <Button x:Name="BooksButton" Click="BooksButton_Click" Margin="10,45,10,49" Content="Books" />
+                <Button x:Name="InvoicesButton" Click="InvoicesButton_Click" Margin="10,93,10,2" Content="Invoices" />
 
-                    <!-- First column -->
-                    <StackPanel Grid.Column="0">
-                        <Button x:Name="AddButton" Click="AddButton_Click" Margin="10 2 20 10" Grid.Column="0" Content="Add" />
-                        <Button x:Name="EditButton" Click="EditButton_Click" Margin="10 0 20 10" Grid.Column="0" Content="Edit" />
-                        <Button x:Name="SellBookButton" Click="SellBookButton_Click" Margin="10 0 20 10" Grid.Column="0" Content="Sell Book" />
-                        <Button x:Name="ReturnBookButton" Click="ReturnBookButton_Click" Margin="10 0 20 2" Grid.Column="0" Content="Return Book" />
-                    </StackPanel>
+                <Button x:Name="AddButton" Click="AddButton_Click" Margin="4,45,215.6,68" Content="Add" Grid.Column="1" />
+                <Button x:Name="EditButton" Click="EditButton_Click" Margin="0,113,215.6,0" Content="Edit" HorizontalAlignment="Right" Width="178" Grid.Column="1" />
+                <Button x:Name="SellBookButton" Click="SellBookButton_Click" Margin="0,79,215.6,34" Content="Sell Book" HorizontalAlignment="Right" Width="178" Grid.Column="1" />
 
-                    <!-- Second column-->
-                    <StackPanel Grid.Column="1">
-                        <Button x:Name="RemoveButton" Click="RemoveButton_Click" Margin="10 2 20 10" Grid.Column="0" Content="Remove" />
-                        <Button x:Name="RemoveAllButton" Click="RemoveAllButton_Click" Margin="10 0 20 2" Grid.Column="0" Content="Remove All" />
-                    </StackPanel>
-                </Grid>
+                <Button x:Name="RemoveButton" Click="RemoveButton_Click" Margin="204,112,13.6,1" Content="Remove" Grid.Column="1" />
+                <Button x:Name="RemoveAllButton" Click="RemoveAllButton_Click" Margin="204,45,13.6,68" Grid.Column="1" Content="Remove All" />
+                <Button x:Name="ReturnBookButton" Click="ReturnBookButton_Click" Margin="204,79,13.6,34" Content="Return Book" Grid.Column="1" />
+                <TextBlock Text="Bookstore Lists" Margin="10,20,0,0" HorizontalAlignment="Left" Width="382" VerticalAlignment="Top" Height="16" FontFamily="Stencil" FontSize="14" />
+                <StackPanel HorizontalAlignment="Left" Height="120" Margin="1,26,0,-8" VerticalAlignment="Top" Width="362" Grid.Column="1"/>
+                <TextBlock x:Name="ControlsText" Text="Managing Data" Margin="4,26,2.6,93" Grid.Column="1" FontFamily="Stencil" FontSize="14" TextWrapping="Wrap" />
 
-            </StackPanel>
-            <Label Content="Bookstore" FontSize="36" FontFamily="Stencil" Margin="297,0,270.6,347" Grid.ColumnSpan="2"/>
+            </Grid>
+
+            <!-- Buttons for changing lists -->
+            <!-- Control Buttons -->
+
+
+            <!-- Control Buttons -->
+
+
+            <Label Content="Bookstore" FontSize="36" FontFamily="Stencil" Margin="321,-14,246.6,361" Grid.ColumnSpan="2"/>
         </Grid>
     </Border>
 </Window>
