--- a/WPFLibrary/View/BookSellingWindow.xaml
+++ b/WPFLibrary/View/BookSellingWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="Book Selling" MinHeight="380" MinWidth="500" Height="380" Width="500" MaxHeight="380" MaxWidth="500">
+        Title="Book Sale" MinHeight="380" MinWidth="500" Height="380" Width="500" MaxHeight="380" MaxWidth="500">
 
     <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" >
         <Grid>
@@ -22,22 +22,26 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- Buttons -->
-                    <Button x:Name="SellBookButton" Click="SellBookButton_Click" Margin="52,57.6,0,10" Content="Sell Books" HorizontalAlignment="Left" Width="149" Grid.Column="1" RenderTransformOrigin="0.653,0.52" Grid.Row="1"/>
-                    <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0,57.6,45,10" Content="Close" HorizontalAlignment="Right" Width="143" Grid.Row="1"/>
-                    <ListView HorizontalAlignment="Left" Height="160" VerticalAlignment="Top" Width="230" Grid.RowSpan="2" Margin="0,10,0,0">
+                    <Button x:Name="SellBookButton" Click="SellBookButton_Click" Margin="10,81.6,0,22" Content="Sell Books" HorizontalAlignment="Left" Width="223" RenderTransformOrigin="0.653,0.52" Grid.Row="1" Grid.Column="1" BorderThickness="1" FontWeight="Bold">
+                        <Button.Effect>
+                            <DropShadowEffect/>
+                        </Button.Effect>
+                    </Button>
+                    <ListView HorizontalAlignment="Left" Height="182" VerticalAlignment="Top" Width="230" Grid.RowSpan="2" Margin="0,10,0,0">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn/>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ListView Grid.Column="1" HorizontalAlignment="Left" Height="160" Margin="10,10,0,0" VerticalAlignment="Top" Width="223" Grid.RowSpan="2">
+                    <ListView Grid.Column="1" HorizontalAlignment="Left" Height="182" Margin="10,10,0,0" VerticalAlignment="Top" Width="223" Grid.RowSpan="2">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn/>
                             </GridView>
                         </ListView.View>
                     </ListView>
+                    <Button Content="Add to the invoice" HorizontalAlignment="Left" Margin="0,81.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="230" Height="38"/>
                 </Grid>
             </StackPanel>
             <Label x:Name="DataContextTitle_Copy" Content="Books catalog" FontSize="18px" HorizontalContentAlignment="Center" Margin="10,39,258.6,261.4" FontFamily="Stencil"/>
