--- a/WPFLibrary/View/AddBookWindow.xaml
+++ b/WPFLibrary/View/AddBookWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="Adding Book" MinHeight ="350" MinWidth="400" Height="300" Width="400">
+        Title="Adding Book" MinHeight ="350" MinWidth="400" Height="300" Width="400"
+        DataContext="{Binding Source={StaticResource Locator}, Path=AddBook}">
 
 
     <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Margin="0,0,-0.4,-47.6">
@@ -15,23 +16,22 @@
 
             <!-- Title -->
             <TextBlock Text="Title" />
-            <TextBox x:Name="TitleText" Padding="2" />
+            <TextBox x:Name="TitleText" Text="{Binding TitleText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
 
             <!-- Author -->
             <TextBlock Text="Author" Margin="0 10 0 0" />
-            <TextBox x:Name="AuthorText" Padding="2" />
+            <TextBox x:Name="AuthorText" Text="{Binding AuthorText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
 
             <!-- Genre -->
             <TextBlock Text="Genre" Margin="0 10 0 0" />
-            <TextBox x:Name="GenreText" Padding="2" />
+            <TextBox x:Name="GenreText" Text="{Binding GenreText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
 
             <!-- Count -->
             <TextBlock Text="Count" Margin="0 10 0 0" />
-            <TextBox x:Name="CountText" Padding="2" />
+            <TextBox x:Name="CountText" Text="{Binding CountText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
 
             <!-- Buttons -->
-            <Button x:Name="AddBookButton" Click="AddBookButton_Click" Margin="0 20 200 10" Grid.Column="0" Content="Add Book"/>
-            <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0 0 200 10" Grid.Column="0" Content="Close"/>
+            <Button x:Name="AddBookButton" Command="{Binding AddBookButtonCommand}" Margin="0 20 200 10" Grid.Column="0" Content="Add Book"/>
         </StackPanel>
     </Border>
 </Window>
