--- a/WPFLibrary/View/EditBookWindow.xaml
+++ b/WPFLibrary/View/EditBookWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFBookstore"
         mc:Ignorable="d"
-        Title="Editing Book" MinHeight ="300" MinWidth="400" Height="355.8" Width="400">
+        Title="Editing Book" MinHeight ="300" MinWidth="400" Height="355.8" Width="400"
+        DataContext="{Binding Source={StaticResource Locator}, Path=EditBook}">
 
 
     <Border Padding="10" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}">
@@ -15,22 +16,19 @@
 
             <!-- Title -->
             <TextBlock Text="Title" />
-            <TextBox x:Name="TitleText" Padding="2" />
+            <TextBox x:Name="TitleText" Text="{Binding TitleText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
 
             <!-- Author -->
             <TextBlock Text="Author" Margin="0 10 0 0" />
-            <TextBox x:Name="AuthorText" Padding="2" />
+            <TextBox x:Name="AuthorText" Text="{Binding AuthorText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
 
             <!-- Genre -->
             <TextBlock Text="Genre" Margin="0 10 0 0" />
-            <TextBox x:Name="GenreText" Padding="2" />
+            <TextBox x:Name="GenreText" Text="{Binding GenreText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2" />
             
             <!-- Count -->
 
-            <Button x:Name="UpdateBookButton" Click="UpdateBookButton_Click" Margin="0,20,199.6,10" Content="Update Book" HorizontalAlignment="Right" Width="174"/>
-
-            <!-- Buttons -->
-            <Button x:Name="CloseButton" Click="CloseButton_Click" Margin="0 0 200 10" Grid.Column="0" Content="Close"/>
+            <Button x:Name="UpdateBookButton" Command="{Binding UpdateButtonCommand}" Margin="0,20,199.6,10" Content="Update Book" HorizontalAlignment="Right" Width="174"/>
         </StackPanel>
     </Border>
 </Window>
